--- a/source/styles.scss
+++ b/source/styles.scss
@@ -7,7 +7,7 @@ $colour-secondary: color.scale(#fff, $lightness: -5%);
 $colour-highlight: red;
 $colour-debug: green;
 
-$padding__standard: 4rem;
+$padding__standard: 2rem;
 $padding__thin: calc($padding__standard / 2);
 
 $margin__standard: $padding__standard;
@@ -77,15 +77,67 @@ body {
 
 /* Header stuff - start */
 header {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	border-bottom: 0.44rem solid $colour-highlight;
+	border-radius: 0 0 1rem 1rem;
+	box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.5);
+
 	grid-area: header;
-	width: 100vw;
-	height: 15vh;
 	background-color: $colour-secondary;
 	@include single-row-grid(3, 2fr 1fr 2fr);
-}
 
-.header__item {
-	padding: 0 $padding__standard;
+	.header__item {
+		padding: 0 $padding__standard;
+	}
+
+	/* Main logo */
+	.fools-logo {
+		grid-column: 2;
+
+		img {
+			padding: calc($padding__thin/2) 0;
+		}
+	}
+
+	nav {
+		grid-column: 3;
+	}
+
+	/* Outer nav element */
+	.nav {
+		padding: 0 $padding__thin;
+		@include single-row-grid(1);
+	}
+
+	/* Inner ul element */
+	.navigation-list {
+		grid-column: 1;
+		width: 100%;
+		padding-inline-start: 0;
+
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: center;
+
+		li {
+			display: inline-block;
+
+			a {
+				font-variant: small-caps;
+				font-weight: 800;
+				font-size: 2rem;
+				text-decoration: none;
+				color: $colour-highlight;
+			}
+
+			a:hover {
+				color: color.adjust($colour-highlight, $saturation: -30);
+			}
+		}
+	}
 }
 
 /* Social media links container */
@@ -95,43 +147,6 @@ header {
 
 	div {
 		margin: 15% $margin__thin;
-	}
-}
-
-/* Main logo */
-header > .fools-logo {
-	grid-column: 2;
-}
-
-header > nav {
-	grid-column: 3;
-}
-
-/* Outer nav element */
-.nav {
-	padding: 0 $padding__thin;
-	@include single-row-grid(1);
-}
-
-/* Inner ul element */
-.navigation-list {
-	grid-column: 1;
-	width: 100%;
-	padding-inline-start: 0;
-
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-
-	li {
-		display: inline-block;
-
-		a {
-			font-variant: small-caps;
-			font-weight: 800;
-			font-size: 2rem;
-		}
 	}
 }
 /* Header stuff - end */
@@ -154,4 +169,58 @@ main {
 	grid-area: main;
 	grid-column: 2;
 	padding: $padding__standard;
+}
+
+.home-section {
+	display: grid;
+	grid: auto auto / 3fr 2fr;
+	grid-template-areas: "title title" "text photo";
+	gap: $margin__thin;
+	margin-bottom: $margin__standard;
+
+	.home-section__title {
+		grid-area: title;
+		font-size: 3rem;
+		font-weight: bold;
+		text-align: center;
+		margin-block-start: 0;
+	}
+
+	.home-section__text {
+		grid-area: text;
+	}
+
+	.home-section__photo {
+		grid-area: photo;
+	}
+}
+
+.about-section {
+	display: grid;
+	grid: auto auto auto auto / 3fr 2fr;
+	grid-template-areas: "title-1 media" "text-1 media" "title-2 media" "text-2 media";
+	margin-bottom: $margin__standard;
+	gap: $margin__thin;
+
+	.about-section__title {
+	}
+
+	.about-section__text {
+	}
+
+	#about-section__title-1 {
+	}
+
+	#about-section__text-1 {
+	}
+
+	#about-section__title-2 {
+	}
+
+	#about-section__text-2 {
+	}
+
+	.about-section__media {
+		grid-area: media;
+	}
 }
