Started work on polaroid photo design

--- a/source/styles.scss
+++ b/source/styles.scss
@@ -73,6 +73,52 @@ body {
 		@include reset-img;
 	}
 }
+
+.polaroid {
+	/* Polaroid is 4.2" x 3.5"
+	4.2 : 3.5 = 6 : 5 */
+	aspect-ratio: 6 / 5;
+	display: grid;
+	/* Border around photo 0.2"
+	Photo is 3.1"
+	Leaving 0.7" at the bottom for caption (not including the bottom photo border)
+	Turning these into fractions of width/height whilst keeping the resulting
+	absolute values equal results in the following abbomination - I'm sorry
+	 */
+	grid-template-rows: 70fr 1085fr 70fr 84fr;
+	grid-template-columns: 84fr 1302fr 84fr;
+	grid-template-areas: "padding__top padding__top padding__top" "padding__left photo padding_right" "padding__bottom padding__bottom padding__bottom" "caption caption caption";
+	// grid: 2fr 31fr 2fr 7fr / 2fr 31fr 2fr / "padding padding padding" "padding photo padding" "padding padding padding" "caption caption caption";
+
+	.polaroid__photo {
+		grid-area: photo;
+	}
+
+	.polaroid__caption {
+		grid-area: caption;
+	}
+
+	.polaroid__padding {
+		width: 100%;
+		height: 100%;
+	}
+
+	.padding__top {
+		grid-area: padding__top;
+	}
+
+	.padding__left {
+		grid-area: padding__left;
+	}
+
+	.padding__right {
+		grid-area: padding__right;
+	}
+
+	.padding__bottom {
+		grid-area: padding__bottom;
+	}
+}
 /* General stylings and helper classes - end */
 
 /* Header stuff - start */
