--- a/source/styles.scss
+++ b/source/styles.scss
@@ -423,3 +423,121 @@ main {
 		// grid-area: media-2;
 	}
 }
+
+.gallery-section {
+	height: 800px;
+	.gallery__carousel {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		overflow: hidden;
+		position: relative;
+
+		.carousel__slides {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			position: relative;
+			align-items: center;
+
+			margin-block: 0;
+			padding-inline: 0;
+
+			.slides__slide {
+				flex: 0 40%;
+				display: block;
+				z-index: 1;
+				visibility: hidden;
+				// border: 2px solid white;
+				// background-color: $colour-secondary;
+				aspect-ratio: 16 / 9;
+
+				will-change: transform;
+			}
+
+			@mixin transition-thing {
+				transition: all 1s ease-in-out;
+			}
+
+			.slide__staged-left {
+				visibility: hidden;
+				position: absolute;
+				width: 40%;
+				left: -40%;
+				@include transition-thing;
+			}
+
+			.slide__prev {
+				visibility: visible;
+				z-index: 2;
+				position: absolute;
+				left: -20%;
+				width: 40%;
+				@include transition-thing;
+			}
+
+			.slide__current {
+				visibility: visible;
+				z-index: 3;
+				width: 60%;
+				position: absolute;
+				left: 20%;
+				@include transition-thing;
+
+				&:hover {
+					cursor: zoom-in;
+				}
+			}
+
+			.slide__current--clicked {
+				z-index: 5;
+				width: 100%;
+				position: absolute;
+				left: 0;
+				@include transition-thing;
+
+				&:hover {
+					cursor: zoom-out;
+				}
+			}
+
+			.slide__next {
+				visibility: visible;
+				z-index: 2;
+				position: absolute;
+				left: 80%;
+				width: 40%;
+				@include transition-thing;
+			}
+
+			.slide__staged-right {
+				visibility: hidden;
+				position: absolute;
+				left: 100%;
+				width: 40%;
+				@include transition-thing;
+			}
+		}
+
+		@mixin carousel-buttons {
+			z-index: 4;
+			position: absolute;
+			height: 100%;
+			width: 20%;
+			top: 0;
+			background-color: rgba(0, 0, 0, 0);
+			cursor: pointer;
+			padding: $padding__standard;
+			border: unset;
+		}
+		.carousel__prev {
+			@include carousel-buttons();
+			left: 0;
+		}
+
+		.carousel__next {
+			@include carousel-buttons();
+			right: 0;
+		}
+	}
+}
