--- a/source/styles.scss
+++ b/source/styles.scss
@@ -51,7 +51,7 @@ $margin__thin: calc($margin__standard / 2);
 * {
 	box-sizing: border-box;
 	font-family: "PT Serif", serif;
-	border: 2px solid $colour-debug; // Debug borders
+	// border: 2px solid $colour-debug; // Debug borders
 }
 
 body {
@@ -148,7 +148,7 @@ body {
 
 /* Header stuff - start */
 header {
-	z-index: 100;
+	z-index: 10;
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
@@ -425,7 +425,7 @@ main {
 }
 
 .gallery-section {
-	height: 800px;
+	height: 80vh;
 	.gallery__carousel {
 		width: 100%;
 		height: 100%;
@@ -434,89 +434,133 @@ main {
 		position: relative;
 
 		.carousel__slides {
-			width: 100%;
+			$slide-size: 40vw;
+			width: calc($slide-size * 5);
 			height: 100%;
 			display: flex;
-			position: relative;
+			position: absolute;
+			left: -$slide-size;
 			align-items: center;
+			justify-content: space-evenly;
 
 			margin-block: 0;
 			padding-inline: 0;
 
+			@mixin transition-thing {
+			}
+
+			// $animation-speed: 15s;
+			// @keyframes scroll {
+			// 	0% {
+			// 		transform: translateX(0);
+			// 	}
+			// 	100% {
+			// 		transform: translateX(calc(-40vw * 2.5));
+			// 	}
+			// }
+			// animation: scroll $animation-speed linear infinite;
+
+			@mixin in-transition($direction) {
+				transition: all 1s ease-in-out;
+				transform: translateX($slide-size * $direction);
+			}
+
+			.in-transition--left {
+				@include in-transition(-1);
+			}
+
+			.in-transition--right {
+				@include in-transition(1);
+			}
+
 			.slides__slide {
-				flex: 0 40%;
+				flex: 0 $slide-size;
 				display: block;
 				z-index: 1;
-				visibility: hidden;
+				visibility: visible;
 				// border: 2px solid white;
 				// background-color: $colour-secondary;
-				aspect-ratio: 16 / 9;
+				aspect-ratio: 1 / 1;
 
 				will-change: transform;
-			}
 
-			@mixin transition-thing {
-				transition: all 1s ease-in-out;
-			}
+				.polaroid {
+					border-radius: 0;
+					width: 80%;
+					img {
+						filter: sepia(25%);
+						transition-property: filter;
+						transition-duration: 0.35s;
+					}
 
-			.slide__staged-left {
-				visibility: hidden;
-				position: absolute;
-				width: 40%;
-				left: -40%;
-				@include transition-thing;
-			}
-
-			.slide__prev {
-				visibility: visible;
-				z-index: 2;
-				position: absolute;
-				left: -20%;
-				width: 40%;
-				@include transition-thing;
-			}
-
-			.slide__current {
-				visibility: visible;
-				z-index: 3;
-				width: 60%;
-				position: absolute;
-				left: 20%;
-				@include transition-thing;
-
-				&:hover {
-					cursor: zoom-in;
+					&:hover {
+						img {
+							filter: none;
+							transition-property: filter;
+							transition-duration: 0.35s;
+						}
+					}
 				}
 			}
 
-			.slide__current--clicked {
-				z-index: 5;
-				width: 100%;
-				position: absolute;
-				left: 0;
-				@include transition-thing;
+			// .slide__staged-left {
+			// 	visibility: hidden;
+			// 	position: absolute;
+			// 	width: 40%;
+			// 	left: -40%;
+			// 	@include transition-thing;
+			// }
 
-				&:hover {
-					cursor: zoom-out;
-				}
-			}
+			// .slide__prev {
+			// 	visibility: visible;
+			// 	z-index: 2;
+			// 	position: absolute;
+			// 	left: -20%;
+			// 	width: 40%;
+			// 	@include transition-thing;
+			// }
 
-			.slide__next {
-				visibility: visible;
-				z-index: 2;
-				position: absolute;
-				left: 80%;
-				width: 40%;
-				@include transition-thing;
-			}
+			// .slide__current {
+			// 	visibility: visible;
+			// 	z-index: 3;
+			// 	width: 40%;
+			// 	position: absolute;
+			// 	left: 20%;
+			// 	@include transition-thing;
 
-			.slide__staged-right {
-				visibility: hidden;
-				position: absolute;
-				left: 100%;
-				width: 40%;
-				@include transition-thing;
-			}
+			// 	&:hover {
+			// 		cursor: zoom-in;
+			// 	}
+			// }
+
+			// .slide__current--clicked {
+			// 	z-index: 5;
+			// 	width: 100%;
+			// 	position: absolute;
+			// 	left: 0;
+			// 	@include transition-thing;
+
+			// 	&:hover {
+			// 		cursor: zoom-out;
+			// 	}
+			// }
+
+			// .slide__next {
+			// 	visibility: visible;
+			// 	z-index: 2;
+			// 	position: absolute;
+			// 	left: 80%;
+			// 	width: 40%;
+			// 	@include transition-thing;
+			// }
+
+			// .slide__staged-right {
+			// 	visibility: hidden;
+			// 	position: absolute;
+			// 	left: 100%;
+			// 	width: 40%;
+			// 	@include transition-thing;
+			// }
 		}
 
 		@mixin carousel-buttons {
