--- a/source/styles.scss
+++ b/source/styles.scss
@@ -425,7 +425,8 @@ main {
 }
 
 .gallery-section {
-	height: 80vh;
+	// height: 80vh;
+	max-width: 80vw;
 	.gallery__carousel {
 		width: 100%;
 		height: 100%;
@@ -435,7 +436,7 @@ main {
 
 		.carousel__slider {
 			.polaroid {
-				// width: 25vw;
+				width: 30vw;
 			}
 		}
 
