--- a/source/styles.scss
+++ b/source/styles.scss
@@ -101,7 +101,7 @@ body {
 	// top: 20vh;
 	// right: 20vw;
 
-	border: 2px solid $colour-debug;
+	// border: 2px solid $colour-debug;
 	// width: 500px;
 
 	.polaroid__hover-target {
