--- a/source/styles.scss
+++ b/source/styles.scss
@@ -5,6 +5,7 @@
 $colour-primary: #292929;
 $colour-secondary: #dddddd;
 $colour-highlight: #af0502;
+$colour-grey: #505050;
 $colour-debug: green;
 
 $padding__standard: 2rem;
@@ -48,6 +49,9 @@ $margin__thin: calc($margin__standard / 2);
 // Setup and definitions - end
 
 /* General stylings and helper classes - start */
+:root {
+	--swiper-theme-color: #{$colour-highlight};
+}
 * {
 	box-sizing: border-box;
 	font-family: "PT Serif", serif;
@@ -92,27 +96,11 @@ body {
 	 */
 	grid-template-rows: 70fr 1085fr 70fr 245fr;
 	grid-template-columns: 84fr 1302fr 84fr;
-	grid-template-areas: "padding__top padding__top padding__top" "padding__left photo padding__right" "padding__bottom padding__bottom padding__bottom" "caption caption caption";
+	grid-template-areas: "padding__top padding__top padding__top" "padding__left photo padding__right" "caption caption caption" "caption caption caption";
 	background-color: whitesmoke;
 
-	box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.5);
-
-	// position: fixed;
-	// top: 20vh;
-	// right: 20vw;
-
-	// border: 2px solid $colour-debug;
-	// width: 500px;
-
-	.polaroid__hover-target {
-		position: absolute;
-		$size-increase: 10%;
-		width: calc(100% + $size-increase);
-		height: calc(100% + $size-increase);
-		top: -#{calc($size-increase / 2)};
-		left: -#{calc($size-increase / 2)};
-		opacity: 0;
-	}
+	border-radius: 0.5%;
+	// box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.5);
 
 	.polaroid__photo {
 		grid-area: photo;
@@ -134,10 +122,12 @@ body {
 		padding-right: $padding__thin;
 		padding-bottom: $padding__thin;
 		padding-top: 0;
+		min-height: 100%;
 
 		p {
-			margin-block: 0 0;
-			text-align: justify;
+			transform-origin: top;
+			// margin-block: 0 0;
+			text-align: center;
 			font-size: x-small;
 			font-family: "Permanent Marker", cursive;
 			color: black;
@@ -256,9 +246,9 @@ main {
 	padding: $padding__standard;
 
 	> section {
-		padding-bottom: 1rem;
+		padding-bottom: $padding__standard;
 		border-bottom: 0.1rem solid $colour-highlight;
-		margin-bottom: 2rem;
+		margin-bottom: $margin__standard;
 	}
 }
 
@@ -301,19 +291,21 @@ main {
 		gap: 2.5%;
 		padding-top: 1rem;
 
+		padding-bottom: 2.5rem;
+		border-bottom: 0.1rem solid $colour-grey;
+
 		&:nth-child(2n) {
 			flex-wrap: wrap-reverse;
 		}
+
+		&:last-child {
+			padding-bottom: 0rem;
+			border-bottom: none;
+		}
 	}
 
-	// display: grid;
-	// grid: auto auto auto auto / 3fr 2fr;
-	// grid-template-areas: "title-1 title-1" "text-1 media-1" "title-2 title-2" "text-2 media-2";
-	// margin-bottom: $margin__standard;
-	// gap: $margin__thin;
-
 	.about-section__text {
-		flex: 2 1 60%;
+		flex: 2 1 40vw;
 
 		.text__title {
 			margin-block-start: 0;
@@ -331,19 +323,13 @@ main {
 	}
 
 	.about-section__media {
-		flex: 1 1 37.5%;
 		min-width: 250px;
+		max-width: 800px;
 		overflow: hidden;
 		position: relative;
-
-		> * {
-			border-radius: 3rem;
-			width: 100%;
-		}
 	}
 
 	#about-section__title-1 {
-		// grid-area: title-1;
 	}
 
 	#about-section__text-1 {
@@ -353,246 +339,107 @@ main {
 	}
 
 	#about-section__text-2 {
-		// grid-area: text-2;
 	}
 
 	#about-section__media-1 {
-		aspect-ratio: 1 / 1;
+		flex: 1 1 25vw;
 		overflow: visible;
+		margin-left: $margin__standard;
 		.polaroid {
-			border-radius: 0;
-			position: absolute;
-			width: 40%;
-			transition: all 0.35s;
-			transition-delay: 0.1s;
-
-			img {
-				filter: sepia(25%);
-				transition-property: filter;
-				transition-duration: 0.35s;
-			}
-
-			&:hover {
-				top: 17.5%;
-				left: 30%;
-				z-index: 5;
-				transform: scale(1.5) rotate(0deg) !important;
-				transition: all 0.35s;
-				// transition-delay: 0.1;
-
-				img {
-					filter: none;
-					transition-property: filter;
-					transition-duration: 0.35s;
+			.polaroid__caption {
+				p {
+					font-size: medium;
 				}
 			}
 		}
 
-		& > :nth-child(1) {
-			top: 5%;
-			left: 20%;
-			z-index: 3;
-			transform: rotate(-15deg);
-			.polaroid__caption > p {
-				rotate: #{calc(random($limit: 20) - 10)}deg;
-			}
-		}
-
-		& > :nth-child(2) {
-			top: 10%;
-			left: 52%;
-			transform: rotate(-5deg);
-			z-index: 1;
-			.polaroid__caption > p {
-				rotate: #{calc(random($limit: 20) - 10)}deg;
-			}
-		}
-
-		& > :nth-child(3) {
-			top: 40%;
-			left: 35%;
-			z-index: 2;
-			transform: rotate(5deg);
-			.polaroid__caption > p {
-				rotate: #{calc(random($limit: 20) - 10)}deg;
-			}
+		.swiper {
+			width: 60%;
 		}
 	}
 
 	#about-section__media-2 {
-		// grid-area: media-2;
+		flex: 1 1 35vw;
+		> * {
+			border-radius: 3rem;
+			width: 100%;
+		}
 	}
 }
 
 .gallery-section {
 	// height: 80vh;
 	max-width: 80vw;
+	padding-top: $padding__thin;
+	overflow: hidden;
 	.gallery__carousel {
 		width: 100%;
 		height: 100%;
 		margin: 0;
-		overflow: hidden;
+		overflow: visible;
 		position: relative;
+		$swiper-ui-base-size: 1.5rem;
+		$nav-size: calc($swiper-ui-base-size * 2);
+		--swiper-navigation-size: #{$nav-size};
 
-		.carousel__slider {
-			.polaroid {
-				width: 30vw;
+		@mixin nav-button {
+			width: auto;
+			height: auto;
+			background-color: color.adjust($colour-grey, $alpha: -0.1);
+			border-radius: calc($nav-size / 3);
+			&:after {
+				margin: calc($nav-size / 3);
 			}
 		}
 
-		.carousel__slides {
-			$slide-width: 40vw;
-			width: $slide-width;
-			height: 100%;
-			display: flex;
-			position: absolute;
-			left: -75%;
-			align-items: center;
-			justify-content: space-evenly;
+		.swiper-button-next,
+		.swiper-button-prev {
+			@include nav-button;
+		}
 
-			margin-block: 0;
-			padding-inline: 0;
-
-			&::before {
-				position: absolute;
-				visibility: hidden;
-				content: "#{$slide-width}";
+		.carousel__slider {
+			.swiper-slide-active {
+				&:hover {
+					z-index: 50;
+				}
 			}
-
-			// $animation-speed: 15s;
-			// @keyframes scroll {
-			// 	0% {
-			// 		transform: translateX(0);
-			// 	}
-			// 	100% {
-			// 		transform: translateX(calc(-40vw * 2.5));
-			// 	}
-			// }
-			// animation: scroll $animation-speed linear infinite;
-
-			@mixin in-transition($direction) {
-				transition: all 5s linear;
-				transform: translateX($slide-width * $direction);
-			}
-
-			.in-transition--left {
-				@include in-transition(-1);
-			}
-
-			.in-transition--right {
-				@include in-transition(1);
-			}
-
-			.slides__slide {
-				flex: 0 $slide-width;
-				display: block;
-				z-index: 1;
-				visibility: visible;
-
-				// border: 2px solid white;
-				// background-color: $colour-secondary;
-				aspect-ratio: 1 / 1;
-
-				will-change: transform;
-
+			.slider__slide {
 				.polaroid {
-					border-radius: 0;
-					width: 80%;
-					img {
-						filter: sepia(25%);
-						transition-property: filter;
-						transition-duration: 0.35s;
-					}
-
-					&:hover {
-						img {
-							filter: none;
-							transition-property: filter;
-							transition-duration: 0.35s;
+					width: 30vw;
+					.polaroid__caption {
+						p {
+							font-size: xx-large;
 						}
 					}
 				}
 			}
-
-			// .slide__staged-left {
-			// 	visibility: hidden;
-			// 	position: absolute;
-			// 	width: 40%;
-			// 	left: -40%;
-			// 	@include transition-thing;
-			// }
-
-			// .slide__prev {
-			// 	visibility: visible;
-			// 	z-index: 2;
-			// 	position: absolute;
-			// 	left: -20%;
-			// 	width: 40%;
-			// 	@include transition-thing;
-			// }
-
-			// .slide__current {
-			// 	visibility: visible;
-			// 	z-index: 3;
-			// 	width: 40%;
-			// 	position: absolute;
-			// 	left: 20%;
-			// 	@include transition-thing;
-
-			// 	&:hover {
-			// 		cursor: zoom-in;
-			// 	}
-			// }
-
-			// .slide__current--clicked {
-			// 	z-index: 5;
-			// 	width: 100%;
-			// 	position: absolute;
-			// 	left: 0;
-			// 	@include transition-thing;
-
-			// 	&:hover {
-			// 		cursor: zoom-out;
-			// 	}
-			// }
-
-			// .slide__next {
-			// 	visibility: visible;
-			// 	z-index: 2;
-			// 	position: absolute;
-			// 	left: 80%;
-			// 	width: 40%;
-			// 	@include transition-thing;
-			// }
-
-			// .slide__staged-right {
-			// 	visibility: hidden;
-			// 	position: absolute;
-			// 	left: 100%;
-			// 	width: 40%;
-			// 	@include transition-thing;
-			// }
 		}
-
-		@mixin carousel-buttons {
-			z-index: 4;
-			position: absolute;
-			height: 100%;
-			width: 20%;
-			top: 0;
-			background-color: rgba(0, 0, 0, 0);
-			cursor: pointer;
-			padding: $padding__standard;
-			border: unset;
-		}
-		.carousel__prev {
-			@include carousel-buttons();
-			left: 0;
-		}
-
-		.carousel__next {
-			@include carousel-buttons();
-			right: 0;
+		.swiper-pagination {
+			$bullet-size: $swiper-ui-base-size;
+			display: flex;
+			width: auto;
+			// height: calc($bullet-size * 1.5);
+			align-items: center;
+			left: 50%;
+			transform: translateX(-50%);
+			background-color: color.adjust($colour-grey, $alpha: -0.2);
+			border-radius: calc($bullet-size / 2);
+			gap: calc($bullet-size / 2);
+			padding: 0 calc($bullet-size / 2);
+			--swiper-pagination-bullet-inactive-color: #{$colour-secondary};
+			--swiper-pagination-bullet-inactive-opacity: 0.7;
+			&-bullet {
+				// flex: 0 0 1.5rem;
+				width: $bullet-size;
+				height: $bullet-size;
+				margin-top: calc($bullet-size / 3);
+				margin-bottom: calc($bullet-size / 3);
+				margin-left: 0;
+				margin-right: 0;
+				// display: block;
+				// margin-top: $margin__thin;
+				// margin-bottom: auto;
+			}
 		}
 	}
 }
