Updated styling on email link

--- a/source/styles.scss
+++ b/source/styles.scss
@@ -84,6 +84,16 @@ h2 {
 	font-size: 1.7rem;
 }
 
+a {
+	color: $colour-highlight;
+	&:hover {
+		color: adjust-color($colour-highlight, $saturation: +10%, $lightness: -10%, $alpha: 1.0);
+	}
+	&:visited {
+		color: adjust-color($colour-highlight, $saturation: 0%, $lightness: +10%, $alpha: 1.0);
+	}
+}
+
 /* Standardise images to aid formatting */
 .img-container {
 	display: flex;
